add more case for service lab

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.lion.lab">
 
     <application
+        android:name=".app.AppApplication"
         android:allowBackup="true"
         android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher"
@@ -10,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".service.ServiceActivity"></activity>
+        <activity android:name=".service.SecondServiceActivity" />
+        <activity android:name=".service.ServiceActivity" />
         <activity android:name=".base.BaseActivity" />
         <activity android:name=".main.MainActivity">
             <intent-filter>
