--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.jeremyliao:live-event-bus:1.4.2'
 }
