--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,15 +21,21 @@ android {
         sourceCompatibility = '1.8'
     }
     buildToolsVersion = '28.0.3'
+    sourceSets { main { aidl.srcDirs = ['src/main/aidl', 'src/main/aidl/'] } }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+//    lifecycle component
     def lifecycle_version = "2.0.0"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+//    liveBus
     implementation 'com.jeremyliao:live-event-bus:1.4.2'
+//    ijkPlayer
+    implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
+    implementation 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.8'
 }
