--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lion.lab">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".app.AppApplication"
         android:allowBackup="true"
@@ -11,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".binder.BinderActivity" />
         <activity android:name=".service.SecondServiceActivity" />
         <activity android:name=".service.ServiceActivity" />
         <activity android:name=".base.BaseActivity" />
@@ -24,6 +27,11 @@
         </activity>
 
         <service android:name=".service.LabService" />
+        <service
+            android:name=".binder.BookManagerService"
+            android:enabled="true"
+            android:exported="true"
+            android:process=":remote" />
     </application>
 
 </manifest>
