--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,13 @@
             android:name=".binder.BookManagerService"
             android:enabled="true"
             android:exported="true"
+            android:permission="false"
+            android:process=":remote" />
+        <service
+            android:name=".binder.AuthorManagerService"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="false"
             android:process=":remote" />
     </application>
 
