--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,6 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 //    liveBus
     implementation 'com.jeremyliao:live-event-bus:1.4.2'
-//    ijkPlayer
-    implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
-    implementation 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.8'
+//    fresco
+    implementation 'com.facebook.fresco:fresco:1.13.0'
 }
