--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".custom_view.CustomViewActivity" />
+        <activity android:name=".fresco.FrescoActivity" />
         <activity android:name=".binder.BinderActivity" />
         <activity android:name=".service.SecondServiceActivity" />
         <activity android:name=".service.ServiceActivity" />
