--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,12 +29,20 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
-//    lifecycle component
+    /*lifecycle component*/
     def lifecycle_version = "2.0.0"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-//    liveBus
+    /*liveBus*/
     implementation 'com.jeremyliao:live-event-bus:1.4.2'
-//    fresco
+    /*fresco*/
     implementation 'com.facebook.fresco:fresco:1.13.0'
+    /*retrofit*/
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    /*rxJava*/
+    implementation "io.reactivex.rxjava2:rxjava:2.2.9"
+    /*rxAndroid*/
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 }
