--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".screen_support.ScreenSupportActivity"></activity>
+        <activity android:name=".http.HttpActivity" />
+        <activity android:name=".scroll_conflict.ScrollConflictActivity" />
         <activity android:name=".custom_view.CustomViewActivity" />
         <activity android:name=".fresco.FrescoActivity" />
         <activity android:name=".binder.BinderActivity" />
